traefik/http-to-https.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-www-https
  namespace:
spec:
  redirectScheme:
    scheme: https
    permanent: true
